samples/_failures_safe/1761654007_ca7202_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_70b633c8.c: In function ‘main’:
./samples/SAFE/__tmp_70b633c8.c:158:17: error: expected declaration or statement at end of input
  158 |                 }
      |                 ^
./samples/SAFE/__tmp_70b633c8.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_70b633c8.c:158:17: error: expected declaration or statement at end of input
